--- a/foundations/05-descendant-combinator/index.html
+++ b/foundations/05-descendant-combinator/index.html
@@ -14,7 +14,7 @@
     <p class="text">This should be unstyled.</p>
     <p class="text">This should be unstyled.</p>
     <div class="container">
-      <p class="yellow">This should be styled.</p>
+      <p class="yllow">This should be styled.</p>
       <p class="yellow">This should be styled.</p>
     </div>
   </body>
